--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ main{
 .question-divs{
     padding: 19px 0 19px 0;
     border-bottom: 1px solid #E8E8EA;
+    transition: all ease 0.5s;
 }
 .question{
     width: 100%;
@@ -125,7 +126,7 @@ main{
         line-height: 17.36px;
     }
     .question-font:hover{
-        color: #F47B56;
+        color: #F47B56 !important;
         cursor: pointer;
     }
     .question img:hover{
